Guard notes for -Waddress-of-packed-member on warning emission (PR c/89985)

gcc/c-family/ChangeLog:
	PR c/89985
	* c-warn.c (check_address_or_pointer_of_packed_member): Add
	auto_diagnostic_group.  Guard inform calls by result of
	warning_at call.

gcc/testsuite/ChangeLog:
	PR c/89985
	* c-c++-common/pr89985.c: New test.

From-SVN: r270169